<resources>
    <string name="app_name">ANIMALL</string>
    <string name="web_client_id">340958678333-5719a01js4bp86i7nvhla4t2egsdffe4.apps.googleusercontent.com</string>
    <string name="login_logo_content_desc">Logo</string>
    <string name="login_caption">The Community Forum \n just got <b>better</b></string>
    <string name="login_sign_in_tips">Sign in using your <b>DLSU email</b> and get access to exclusive offers and more</string>
    <string name="login_sign_in_btn">Sign In</string>
    <string name="location_title">Please set your current location</string>
    <string name="location_tips">This location will be used as reference for pickups &amp; deliveries</string>
    <string name="location_confirm">Confirm</string>
    <string name="location_search_hint">Enter City</string>
    <string name="location_dialog_title">Confirm</string>
    <string name="product_name">Carlos Shi Real PNG</string>
    <string name="product_price_unit">₱</string>
    <string name="product_stock">42 in Stock</string>
    <string name="product_price">9,999,999</string>
    <string name="product_partition">|</string>
    <string name="product_category">Electronics</string>
    <string name="seller_location">Sus, France</string>
    <string name="listing_closed">Closed</string>
    <string name="listing_description_title">Description:</string>
    <string name="listing_description">Description</string>
    <string name="listing_seller_title">Seller:</string>
    <string name="listing_seller">Seller</string>
    <string name="listing_order">Make an Order</string>
    <string name="listing_contact">Contact Seller</string>

    <string name="create_listing">Create Listing</string>
    <string name="cancel_listing">X</string>
    <string name="create_product_name">Product Name</string>
    <string name="create_product_name_hint">Product name (Max 30 Characters)</string>
    <string name="create_product_name_error">Product name is required.</string>
    <string name="create_price">Price per Item</string>
    <string name="create_price_error">Product price is required.</string>
    <string name="create_quantity">Quantity</string>
    <string name="create_quantity_error">Product quantity is required.</string>
    <string name="create_quantity_hint">Quantity (Max 1,000)</string>
    <string name="create_description">Description</string>
    <string name="create_description_hint">Product description (Max 200 Characters)</string>
    <string name="create_description_error">Product description is required.</string>
    <string name="create_category">Category</string>
    <string name="create_category_error">Product category is required.</string>
    <string name="create_location">Meetup Location</string>
    <string name="create_location_hint">Sample Location</string>
    <string name="create_location_error">Meetup location is required.</string>
    <string name="create_photo">Product Photos</string>
    <string name="create_photo_error">Product photos are required.</string>

     <string-array name="category_options">
        <item>Filter by:</item>
        <item>Clothing</item>
        <item>Food</item>
        <item>Electronics</item>
        <item>Books</item>
        <item>Stationery</item>
        <item>Health &amp; Fitness</item>
        <item>Others</item>
    </string-array>
    <string-array name="listing_category_options">
        <item>Clothing</item>
        <item>Food</item>
        <item>Electronics</item>
        <item>Books</item>
        <item>Stationery</item>
        <item>Health &amp; Fitness</item>
        <item>Others</item>
    </string-array>
    <string-array name="sort_options">
        <item>Sort by:</item>
        <item>Price: Low to High</item>
        <item>Price: High to Low</item>
        <item>Location: Closer First</item>
    </string-array>
    <string name="sort_clear">Clear selection</string>
    <string name="load_more">Load More</string>

    <string name="search_icon">Search Icon</string>
    <string name="search_hint">Search for a product</string>
    <string name="clear_selection">Clear Filter/Sort</string>
    <string name="listing_name">Product Name</string>
    <string name="listing_price">Product Price</string>
    <string name="listing_location">Product City</string>
    <string name="listing_category">Product Category</string>
    <string name="listing_image">Listing Image</string>
    <string name="listing_make_offer">Make Offer</string>
    <string name="listing_view_profile">View Seller Profile</string>

    <string name="message">You: Boi I am tired</string>
    <string name="message_time">August 15, 2021 6:09PM</string>

    <string name="message_make_offer">Make Offer</string>
    <string name="message_make_order">Place Order</string>
    <string name="listing_quantity">Listing Quantity</string>
    <string name="message_cancel">Cancel</string>
    <string name="message_total">Total: </string>
    <string name="message_quantity">25</string>
    <string name="message_price">₱25.00</string>
    <string name="message_multiply">X</string>
    <string name="message_total_price">= ₱625.00</string>
    <string name="message_new_amount">Offer Amount:</string>
    <string name="message_quantity_input">Quantity:</string>
    <string name="message_offer_summary">Total: ₱420</string>
    <string name="message_new_offer">Offer Amount</string>

    <string name="profile_logout">Logout</string>
    <string name="profile_name">Name</string>
    <string name="profile_edit_location">Edit Location</string>
    <string name="profile_delete_listing">Delete</string>
    <string name="profile_edit_listing">Edit</string>
    <string name="profile_close_listing">Close</string>
    <string name="profile_listings">Listings</string>
    <string name="profile_orders">Orders</string>
    <string name="profile_confirm_order">Confirm Order</string>
    <string name="profile_order_confirmed">Order Confirmed</string>
    <string name="profile_curr_stock_count">Current stock count: </string>
    <string name="profile_new_stock_count">Updated stock count:</string>

    <string name="dialog_confirm">Confirm</string>
    <string name="dialog_cancel">Cancel</string>
    <string name="message_bubble_username">username</string>
    <string name="message_bubble_message">message</string>

    <string name="message_new_offer_bubble">New Order / Offer</string>
    <string name="message_new_offerA_bubble">Amount</string>
    <string name="message_new_offerQ_bubble">Quantity</string>
    <string name="message_new_offer_decline">Decline</string>
    <string name="message_new_offer_accept">Accept</string>
</resources>
