<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/itemContainerLayout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="24dp"
    android:layout_marginTop="16dp"
    android:layout_marginRight="24dp"
    android:layout_marginBottom="8dp"
    android:background="@drawable/curved_rectangle"
    android:elevation="20dp"
    android:paddingTop="10dp">

    <TextView
        android:id="@+id/productNameTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/futura_light_bt"
        android:text="@string/listing_name"
        android:textColor="#000000"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/productPriceTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/futura_light_bt"
        android:text="@string/listing_price"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/productNameTv" />

    <com.google.android.material.chip.Chip
        android:id="@+id/productLocationChip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/futura_light_bt"
        android:includeFontPadding="false"
        android:outlineProvider="bounds"
        android:text="@string/listing_location"
        android:textSize="12sp"
        app:chipBackgroundColor="#FFFFFF"
        app:chipIcon="@drawable/ic_location"
        app:chipIconSize="18dp"
        app:chipStrokeWidth="1dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/productPriceTv" />

    <com.google.android.material.chip.Chip
        android:id="@+id/productCategoryChip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:fontFamily="@font/futura_light_bt"
        android:includeFontPadding="false"
        android:outlineProvider="bounds"
        android:text="@string/listing_category"
        android:textSize="12sp"
        app:chipBackgroundColor="#FFFFFF"
        app:chipIconSize="18dp"
        app:chipStrokeWidth="1dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/productPriceTv" />

    <ImageView
        android:id="@+id/productImageIv"
        android:layout_width="0dp"
        android:layout_height="150dp"
        android:layout_marginTop="16dp"
        android:adjustViewBounds="true"
        android:background="@drawable/curved_rectangle"
        android:contentDescription="@string/listing_image"
        android:scaleType="fitCenter"
        android:src="@drawable/kato"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/productLocationChip" />
</androidx.constraintlayout.widget.ConstraintLayout>