<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/listingContainerCl"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    android:layout_marginLeft="8dp"
    android:layout_marginTop="8dp"
    android:layout_marginRight="8dp"
    android:background="@drawable/curved_rectangle"
    android:elevation="20dp">

    <TextView
        android:id="@+id/profileListingNameTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="12dp"
        android:fontFamily="@font/futura_medium_bt"
        android:text="@string/message_make_order"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/messageProductNameTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="4dp"
        android:fontFamily="@font/futura_light_bt"
        android:text="@string/listing_name"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profileListingNameTv" />

    <LinearLayout
        android:id="@+id/messagePriceUpdateLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="12dp"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/messageProductNameTv">

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/minusCountBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginEnd="24dp"
            app:backgroundTint="#E0E0E0"
            app:fabCustomSize="30dp"
            app:srcCompat="@drawable/ic_baseline_remove_24" />

        <TextView
            android:id="@+id/messageQuantityTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="24dp"
            android:fontFamily="@font/futura_light_bt"
            android:text="@string/message_quantity"
            android:textColor="@color/black"
            android:textSize="24sp" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/addCountBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            app:backgroundTint="#000000"
            app:fabCustomSize="30dp"
            app:srcCompat="@drawable/ic_baseline_add_24" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/messageComputationLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="12dp"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/messagePriceUpdateLayout">

        <TextView
            android:id="@+id/messageTotalTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/futura_light_bt"
            android:text="@string/message_total"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/messageQuantityTotalTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/message_quantity"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/messageXTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/message_multiply"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/messagePriceTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/message_price"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/messageTotalPriceTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/message_total_price"
            android:textColor="@color/black"
            android:textSize="18sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/listingActionsLl"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/messageComputationLayout">

        <Button
            android:id="@+id/profileDeleteListingBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:layout_weight="1"
            android:backgroundTint="@color/error_red"
            android:fontFamily="@font/futura_light_bt"
            android:text="@string/message_cancel"
            android:textAllCaps="false"
            android:textSize="16sp" />

        <Button
            android:id="@+id/profileEditListingBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:layout_weight="1"
            android:fontFamily="@font/futura_light_bt"
            android:text="@string/message_make_order"
            android:textAllCaps="false"
            android:textSize="16sp" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>